--- a/deutschebahn/cityConfig.json
+++ b/deutschebahn/cityConfig.json
@@ -15,9 +15,6 @@
 	"cards": [
 		"deutschebahn/help.json",
 
-		"deutschebahn/12049d7f-f807-420e-ac66-2faaf96bea2b.php",
-		"deutschebahn/fe68e74c-f2d2-4645-b789-015f204f2df6.php",
-		"deutschebahn/1cc0f0c6-f0fd-45a6-97f7-ca2061dc0eef.php",
 		"deutschebahn/e2e49c52-3f6f-4fe9-923b-1e928026b4b1.json",
 		"deutschebahn/332086f2-b39a-463e-875f-9a2168b8e22c.json",
 		"deutschebahn/e223032a-b898-41e5-83c3-ad6c8479c399.json",
@@ -28,5 +25,10 @@
 		"deutschebahn/6c6ed95f-06f9-4f93-890e-8f2d39ce1952.json",
 		"deutschebahn/24c5fc38-7355-40db-8193-69e0b395d0b7.json",
 		"deutschebahn/5000642e-f686-4211-b7c7-97a9c2c1e23a.json"
+	],
+	"_onComment": [
+		"deutschebahn/12049d7f-f807-420e-ac66-2faaf96bea2b.php",
+		"deutschebahn/fe68e74c-f2d2-4645-b789-015f204f2df6.php",
+		"deutschebahn/1cc0f0c6-f0fd-45a6-97f7-ca2061dc0eef.php"
 	]
 }
