--- a/deutschebahn/cityConfig.json
+++ b/deutschebahn/cityConfig.json
@@ -4,7 +4,7 @@
 		"twitter": "https://twitter.com/tursics/",
 		"github": "https://github.com/tursics/data-dashboard/",
 		"showMenuCity": true,
-		"background": "deutschebahn/3496_1.jpg",
+		"background_will_ich_nicht": "deutschebahn/3496_1.jpg",
 		"uri": "http://daten-waben.tursics.de/"
 	},
 	"data": {
